--- a/app/views/ansible_credential/_credential_form.html.haml
+++ b/app/views/ansible_credential/_credential_form.html.haml
@@ -34,7 +34,7 @@
                   'id'          => 'type',
                   'ng-disabled' => 'vm.credentialModel.manager_resource === null',
                   'required'    => 'true',
-                  'pf-select'   => 'true'}
+                  'miq-select'  => 'true'}
       - else
         .col-md-8
           {{ vm.credential_options[vm.credentialModel.type].label }}
