--- a/app/views/auth_key_pair_cloud/_form.html.haml
+++ b/app/views/auth_key_pair_cloud/_form.html.haml
@@ -46,7 +46,7 @@
                   'ng-options'                 => 'ems.name for ems in vm.ems_choices',
                   :id                          => 'ems_id',
                   :required                    => '',
-                  'pf-select'                  => true)
+                  'miq-select'                 => true)
           :javascript
             miqInitSelectPicker();
     = render :partial => 'layouts/angular/generic_form_buttons'
