--- a/app/views/ems_container/ad_hoc/_list_view_form.html.haml
+++ b/app/views/ems_container/ad_hoc/_list_view_form.html.haml
@@ -1,6 +1,6 @@
 .col-md-12.tenant-filter-bar
   .form-group.pull-left.ad-hoc-tenant
-    %select.selectpicker.tenants-selector{"pf-select"              => "",
+    %select.selectpicker.tenants-selector{"miq-select"             => "",
                                           "id"                     => "tenant-slector",
                                           "ng-options"             => "o.label for o in dash.tenantList",
                                           "ng-model"               => "dash.tenant",
