--- a/app/views/flavor/_flavor_form.html.haml
+++ b/app/views/flavor/_flavor_form.html.haml
@@ -21,7 +21,7 @@
                 'ng-options'                 => 'ems.name for ems in vm.ems_list',
                 :id                          => 'ems_id',
                 :required                    => '',
-                'pf-select'                  => true)
+                'miq-select'                 => true)
         :javascript
           miqInitSelectPicker();
     .form-group
