--- a/app/views/static/vm_cloud/add_security_group.html.haml
+++ b/app/views/static/vm_cloud/add_security_group.html.haml
@@ -17,7 +17,7 @@
         %select{"name"                        => "security_group",
                 "ng-model"                    => "vm.vmCloudModel.security_group",
                 "ng-options"                  => "security_group.name as security_group.name for security_group in vm.security_groups",
-                "pf-select"                   => true,
+                "miq-select"                  => true,
                 "required"                    => "",
                 "selectpicker-for-select-tag" => ""}
 
