--- a/app/views/layouts/angular/_ansible_form_options_angular.html.haml
+++ b/app/views/layouts/angular/_ansible_form_options_angular.html.haml
@@ -25,7 +25,7 @@
                 "name"        => "#{prefix}_repository_id",
                 'ng-options'  => 'repository as repository.name for repository in vm.repositories',
                 "ng-required" => "vm.fieldsRequired('#{prefix}')",
-                'pf-select'   => true}
+                'miq-select'  => true}
           %option{"value" => ""}
             = "<#{_('Choose')}>"
 
@@ -40,7 +40,7 @@
                   "required"         => "",
                   :miqrequired       => true,
                   "data-live-search" => "true",
-                  'pf-select'        => true}
+                  'miq-select'       => true}
             %option{"value" => ""}
               = "<#{_('Choose')}>"
 
@@ -55,7 +55,7 @@
                     "required"         => "",
                     :miqrequired       => true,
                     "data-live-search" => "true",
-                    'pf-select'        => true}
+                    'miq-select'       => true}
               %option{"value" => ""}
                 = "<#{_('Choose')}>"
         .form-group{"ng-class" => "{'has-error': angularForm.#{prefix}_vault_credential_id.$invalid}"}
@@ -66,7 +66,7 @@
                     "name"             => "#{prefix}_vault_credential_id",
                     'ng-options'       => 'vault_credential as vault_credential.name for vault_credential in vm.vault_credentials',
                     "data-live-search" => "true",
-                    'pf-select'        => true}
+                    'miq-select'       => true}
               %option{"value" => ""}
                 = "<#{_('Choose')}>"
         -#.form-group
@@ -78,7 +78,7 @@
         -#            'ng-options'       => 'network_credential as network_credential.name for network_credential in vm.network_credentials',
         -#            :checkchange       => true,
         -#            "data-live-search" => "true",
-        -#            'pf-select'        => true}
+        -#            'miq-select'       => true}
         -#      %option{"value" => ""}
         -#        = "<#{_('Choose')}>"
 
@@ -89,7 +89,7 @@
             %select{"ng-model"    => "vm._#{prefix}_cloud_type",
                     "name"        => "#{prefix}_cloud_type",
                     'ng-options'  => "k as v for (k,v) in vm.cloudTypes",
-                    "pf-select"   => true}
+                    "miq-select"  => true}
               %option{"value" => ""}
                 = "<#{_('Choose')}>"
         #cloud_credentials_div{"ng-show" => "vm.#{prefix}_cloud_type !== ''"}
@@ -101,7 +101,7 @@
                       "name"             => "#{prefix}_cloud_credential_id",
                       'ng-options'       => "cloud_credential as cloud_credential.name for cloud_credential in vm.#{prefix}_cloud_credentials",
                       "data-live-search" => "true",
-                      'pf-select'        => true}
+                      'miq-select'       => true}
                 %option{"value" => ""}
                   = "<#{_('Choose')}>"
 
@@ -155,7 +155,7 @@
                 "name"        => "#{prefix}_log_output",
                 'ng-options'  => 'v as k for (v, k) in vm.log_output_types',
                 "checkchange" => "",
-                'pf-select'   => true}
+                'miq-select'  => true}
     #escalate_privilege{"ng-if" => "(#{ng_model}.#{prefix}_become_enabled!=='undefined' || vm.retirement_playbook_selected('#{prefix}'))"}
       .form-group
         %label.col-md-3.control-label
@@ -177,7 +177,7 @@
                 "name"        => "#{prefix}_verbosity",
                 'ng-options'  => 'v as k for (v, k) in vm.verbosity_types',
                 "checkchange" => "",
-                'pf-select'   => true}
+                'miq-select'  => true}
 
     - if prefix == "retirement"
       .form-group
@@ -188,7 +188,7 @@
                   "name"        => "retirement_remove_resources",
                   'ng-options'  => "v as k for (k, v) in vm.remove_resources_types",
                   'checkchange' => "",
-                  "pf-select"   => true}
+                  "miq-select"  => true}
 
   .col-md-12.col-lg-6{'ng-if' => "#{ng_model}.#{prefix}_variables!==undefined"}
     .form-group
@@ -274,7 +274,7 @@
                   "ng-required"      => "vm.fieldsRequired('#{prefix}') && #{ng_model}.#{prefix}_dialog_existing == 'existing'",
                   :checkchange       => true,
                   "data-live-search" => "true",
-                  'pf-select'        => true}
+                  'miq-select'       => true}
             %option{"value" => ""}
               = "<#{_('Choose')}>"
             %span.help-block{"ng-show" => "angularForm.#{prefix}_dialog_id.$error.$invalid"}
