--- a/app/views/security_group/new.html.haml
+++ b/app/views/security_group/new.html.haml
@@ -21,7 +21,7 @@
                 'ng-change'  => "vm.filterNetworkManagerChanged(vm.securityGroupModel.ems_id)",
                 'ng-model'   => "vm.securityGroupModel.ems_id",
                 'ng-options' => 'ems.id as ems.name for ems in vm.ems',
-                'pf-select'  => true,
+                'miq-select' => true,
                 'required'   => ''}
           %option{:value => ""}
             = "<#{_('Choose')}>"
@@ -40,7 +40,7 @@
         %select{:name                         => "cloud_tenant_id",
                 "ng-model"                    => "vm.securityGroupModel.cloud_tenant_id",
                 "ng-options"                  => "tenant.id as tenant.name for tenant in vm.available_tenants",
-                "pf-select"                   => true,
+                "miq-select"                  => true,
                 "required"                    => "",
                 "selectpicker-for-select-tag" => ""}
           %option{"value" => ""}
